CRINGE DEBUGGING MODE: ON

--- a/arch/arm64/configs/gs290_defconfig
+++ b/arch/arm64/configs/gs290_defconfig
@@ -443,3 +443,7 @@ CONFIG_MICROTRUST_TEE_SUPPORT=y
 #finger
 CONFIG_MTK_FINGERPRINT_SUPPORT=y
 CONFIG_MTK_FINGERPRINT_SELECT="ft9362_tee"
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+CONFIG_USB_SERIAL_PL2303=y
